--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,5 +2,7 @@ web:
   restart: always
   ports :
    - "80:80"
+   - "443:443"
   volumes:
     - .:/var/www/htdocs/
+    - ./docker/apache/var/log/apache2:/var/log/apache2
