--- a/bin/conf/vhost_old.conf
+++ b/bin/conf/vhost_old.conf
@@ -1,9 +1,16 @@
-<VirtualHost *>
-    ServerName jira-fullservice-sdk-js-feature-kraken-90.hipay-pos-platform.com
+<VirtualHost *:80>
 	ServerAdmin webmaster@localhost
 	DocumentRoot /var/www/htdocs/example/public
 
-	SSLEngine On
+	ErrorLog ${APACHE_LOG_DIR}/error.log
+	CustomLog ${APACHE_LOG_DIR}/access.log combined
+</VirtualHost>
+
+<VirtualHost *:443>
+	ServerAdmin webmaster@localhost
+	DocumentRoot /var/www/htdocs/example/public
+
+	#SSLEngine On
     SSLProtocol All
     SSLCertificateFile /etc/ssl/certs/server.crt
     SSLCertificateKeyFile /etc/ssl/certs/server.key
