--- a/bin/conf/vhost.conf
+++ b/bin/conf/vhost.conf
@@ -1,5 +1,5 @@
-<VirtualHost *>
-    ServerName jira-fullservice-sdk-js-feature-kraken-90.hipay-pos-platform.com
+<VirtualHost *.{PORT_WEB}>
+    ServerName {CONTAINER_NAME_WEB}
 	ServerAdmin webmaster@localhost
 	DocumentRoot /var/www/htdocs/example/public
 
