--- a/bin/conf/vhost.conf
+++ b/bin/conf/vhost.conf
@@ -1,8 +1,8 @@
 <VirtualHost *.{PORT_WEB}>
-    ServerName {CONTAINER_NAME_WEB}
+    ServerName jira-sdk-js-feature-kraken-90.hipay-pos-platform.com
 	ServerAdmin webmaster@localhost
 	DocumentRoot /var/www/htdocs/example/public
-	
+
 	SSLEngine On
     SSLProtocol All
     SSLCertificateFile /etc/ssl/certs/server.crt
