--- a/bin/conf/vhost.conf
+++ b/bin/conf/vhost.conf
@@ -1,4 +1,4 @@
-<VirtualHost *.{PORT_WEB}>
+<VirtualHost *>
     ServerName jira-sdk-js-feature-kraken-90.hipay-pos-platform.com
 	ServerAdmin webmaster@localhost
 	DocumentRoot /var/www/htdocs/example/public
