--- a/bin/conf/vhost.conf
+++ b/bin/conf/vhost.conf
@@ -3,6 +3,15 @@
 	ServerAdmin webmaster@localhost
 	DocumentRoot /var/www/htdocs/example/public
 
+	ErrorLog ${APACHE_LOG_DIR}/error.log
+	CustomLog ${APACHE_LOG_DIR}/access.log combined
+</VirtualHost>
+
+<VirtualHost *>
+    ServerName jira-sdk-js-feature-kraken-90.hipay-pos-platform.com
+	ServerAdmin webmaster@localhost
+	DocumentRoot /var/www/htdocs/example/public
+
 	SSLEngine On
     SSLProtocol All
     SSLCertificateFile /etc/ssl/certs/server.crt
