--- a/bin/conf/vhost.conf
+++ b/bin/conf/vhost.conf
@@ -1,6 +1,16 @@
+Listen 443
+Listen 8004
+
 <VirtualHost *>
+    ServerName localhost
 	ServerAdmin webmaster@localhost
 	DocumentRoot /var/www/htdocs/example/public
+
+	SSLEngine On
+    SSLProtocol All
+    SSLProxyEngine On
+    SSLCertificateFile /etc/ssl/certs/server.crt
+    SSLCertificateKeyFile /etc/ssl/certs/server.key
 
 	ErrorLog ${APACHE_LOG_DIR}/error.log
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
