--- a/bin/conf/vhost_ok.conf
+++ b/bin/conf/vhost_ok.conf
@@ -1,20 +1,13 @@
 Listen 443
-Listen 80
+Listen 8004
 
-<VirtualHost *:80>
-	ServerAdmin webmaster@localhost
-	DocumentRoot /var/www/htdocs/example/public
-
-	ErrorLog ${APACHE_LOG_DIR}/error.log
-	CustomLog ${APACHE_LOG_DIR}/access.log combined
-</VirtualHost>
-
-<VirtualHost *:443>
+<VirtualHost *>
 	ServerAdmin webmaster@localhost
 	DocumentRoot /var/www/htdocs/example/public
 
 	SSLEngine On
     SSLProtocol All
+    SSLProxyEngine On
     SSLCertificateFile /etc/ssl/certs/server.crt
     SSLCertificateKeyFile /etc/ssl/certs/server.key
 
