--- a/composer.json
+++ b/composer.json
@@ -2,5 +2,6 @@
   "name": "hipay/hipay-enterprise-sdk-js",
   "description": "The HiPay Fullservice SDK for JavaScript allows you to tokenize credit or debit cards against the HiPay Fullservice payment platform.",
   "type": "project",
-  "homepage": "https://github.com/hipay/hipay-fullservice-sdk-js"
+  "homepage": "https://github.com/hipay/hipay-fullservice-sdk-js",
+  "license" : "Apache-2.0"
 }
