--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hipay-fullservice-sdk-js",
   "version": "2.0.2",
   "main": "dist/hipay-fullservice-sdk.js",
+  "license": "Apache-2.0",
   "description": "The HiPay Fullservice SDK for JavaScript allows you to tokenize credit or debit cards against the HiPay Fullservice payment platform. This method allows you to offer a unified payment workflow to your customer. The SDK leverages the Direct Post method and is fully PCI compliant.",
   "dependencies": {
     "es5-sham-ie8": "^1.0.1",
