--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,7 @@
 {
   "name": "hipay-fullservice-sdk-js",
-  "version": "2.0.2",
+  "version": "2.0.3",
+  "license": "Apache-2.0",
   "homepage": "https://github.com/hipay/hipay-fullservice-sdk-js",
   "description": "The HiPay Fullservice SDK for JavaScript allows you to tokenize credit or debit cards against the HiPay Fullservice payment platform.",
   "main": [
